--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Foodies - Restaurant Category Responsive Web Template - About : W3Layouts</title>
+    <title>Foodies Men - Restaurant Category Responsive Web Template - About : W3Layouts</title>
     <!-- google-fonts -->
     <link href="//fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-expand-lg stroke px-0">
                 <h1>
                     <a class="navbar-brand" href="index.html">
-                        <i class="fa fa-cutlery" aria-hidden="true"></i> Foodies
+                        <i class="fa fa-cutlery" aria-hidden="true"></i> Foodies Men
                     </a>
                 </h1>
                 <!-- if logo is image enable this   
@@ -231,7 +231,7 @@
                         <p class="mb-4"> The medical urn is made to be spent. In and propagandize adornment, mass in time, mourning wisdom. It is not the same as the heat of the house or the house of God. </p>
                         <div class="app-4-connection">
                             <div class="newsletter">
-                                <label>Never Miss a Deal From Foodies</label>
+                                <label>Never Miss a Deal From Foodies Men</label>
                                 <form action="#" methos="GET" class="d-flex wrap-align">
                                     <input type="email" placeholder="Enter your email id" required="required" />
                                     <button type="submit">Get Promocode</button>
@@ -261,7 +261,7 @@
             <div class="container">
                 <div class="row footer-p">
                     <div class="col-lg-4 pr-lg-5">
-                        <a class="logo" href="index.html"><i class="fa fa-cutlery" aria-hidden="true"></i> Foodies</a>
+                        <a class="logo" href="index.html"><i class="fa fa-cutlery" aria-hidden="true"></i> Foodies Men</a>
                         <p class="mt-4"> The master of the household's finances, the master of life's homework, the author of life. Some people need to decorate the ugly. </p>
                     </div>
                     <div class="col-lg-4 mt-lg-0 mt-4">
@@ -283,7 +283,7 @@
                             </div>
                             <div class="col-6 column pl-0">
                                 <ul class="footer-gd-16">
-                                    <li><a href="menu.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Foodies
+                                    <li><a href="menu.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Foodies Men
                                             Menu</a></li>
                                     <li><a href="#privacy"><i class="fa fa-angle-right" aria-hidden="true"></i>Privacy
                                             Policy</a></li>
@@ -308,7 +308,7 @@
                 </div>
                 <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
                     <div class="columns text-lg-left">
-                        <p class="copy-text">copywrite &copy; by yashodeep joshi
+                        <p class="copy-text">copywrite &copy; by yashodeep joshi 2023
                         </p>
                     </div>
                     <div class="columns-2 mt-md-0 mt-3">
