--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Foodies - Restaurant Category Responsive Web Template - Contact : W3Layouts</title>
+    <title>Foodies Men - Restaurant Category Responsive Web Template - Contact : W3Layouts</title>
     <!-- google-fonts -->
     <link href="//fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-expand-lg stroke px-0">
                 <h1>
                     <a class="navbar-brand" href="index.html">
-                        <i class="fa fa-cutlery" aria-hidden="true"></i> Foodies
+                        <i class="fa fa-cutlery" aria-hidden="true"></i> Foodies Men
                     </a>
                 </h1>
                 <!-- if logo is image enable this   
@@ -157,7 +157,7 @@
             <div class="container">
                 <div class="row footer-p">
                     <div class="col-lg-4 pr-lg-5">
-                        <a class="logo" href="index.html"><i class="fa fa-cutlery" aria-hidden="true"></i> Foodies</a>
+                        <a class="logo" href="index.html"><i class="fa fa-cutlery" aria-hidden="true"></i> Foodies Men</a>
                         <p class="mt-4">he master of the household's finances, the master of life's homework, the author of life. </p>
                     </div>
                     <div class="col-lg-4 mt-lg-0 mt-4">
@@ -179,7 +179,7 @@
                             </div>
                             <div class="col-6 column pl-0">
                                 <ul class="footer-gd-16">
-                                    <li><a href="menu.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Foodies
+                                    <li><a href="menu.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Foodies Men
                                             Menu</a></li>
                                     <li><a href="#privacy"><i class="fa fa-angle-right" aria-hidden="true"></i>Privacy
                                             Policy</a></li>
@@ -204,7 +204,7 @@
                 </div>
                 <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
                     <div class="columns text-lg-left">
-                        <p class="copy-text">copywrite &copy; by yashodeep joshi
+                        <p class="copy-text">copywrite &copy; by yashodeep joshi 2023
                         </p>
                     </div>
                     <div class="columns-2 mt-md-0 mt-3">
