--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Foodies - Restaurant Category Responsive Web Template - Home : W3Layouts</title>
+    <title>Foodies Men - Restaurant Category Responsive Web Template - Home : W3Layouts</title>
     <!-- google-fonts -->
     <link href="//fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-expand-lg stroke px-0">
                 <h1>
                     <a class="navbar-brand" href="index.html">
-                        <i class="fa fa-cutlery" aria-hidden="true"></i> Foodies
+                        <i class="fa fa-cutlery" aria-hidden="true"></i> Foodies Men
                     </a>
                 </h1>
                 <!-- if logo is image enable this   
@@ -117,7 +117,7 @@
                                 alt="content-photo"></a>
                     </div>
                     <div class="col-lg-6 content-left mb-md-0 mb-3">
-                        <h3>Welcome To Our <span>Foddies</span></h3>
+                        <h3>Welcome To Our <span>Foddies Men</span></h3>
                         <p>Our silent partners are apt to marry on the shores, through hymenaean enterprises. Aenean's life before the element, that eleifend eros should be mourned. Now even the kids. The class is suitable for the silent partners who turn to the shores through our marriages, through the Hymenaean projects. Aenean's life is an element before, that eleifend eros should be mourned. either it was a keyboard or not itself. In order to take care of the quiver.</p>
                         <p>Now even the kids. The class is suitable for the silent partners who turn to the shores through our marriages, through the Hymenaean projects. Aenean's life is an element before, that eleifend eros should be mourned. either it was a keyboard or not itself. In order to take care of the quiver.</p>
                         <a class="btn button-style" href="about.html">Read More </a>
@@ -143,7 +143,7 @@
                                 <div class="position-relative">
                                     <img src="assets/images/team1.jpg" class="img-responsive" alt="content-photo">
                                     <div class="text-position">
-                                        <h4><a href="about.html">Jimic Nasium</a></h4>
+                                        <h4><a href="about.html">Yash Kulkarni</a></h4>
                                         <p>Best Chef</p>
                                     </div>
                                 </div>
@@ -152,7 +152,7 @@
                                 <div class="position-relative">
                                     <img src="assets/images/team2.jpg" class="img-responsive" alt="content-photo">
                                     <div class="text-position">
-                                        <h4><a href="about.html">Henry Itondo</a></h4>
+                                        <h4><a href="about.html">Santosh Meheta</a></h4>
                                         <p>Food Expert</p>
                                     </div>
                                 </div>
@@ -337,7 +337,7 @@
                     <div class="float-rt text-right">
                         <ul class="buttons">
                             <li class="phone"><span class="fa fa-volume-control-phone mr-1" aria-hidden="true"></span>
-                                <a class="call-style-w3" href="tel:+1(23) 456 789 0000">+1(23) 456 789 0000</a>
+                                <a class="call-style-w3" href="tel:+1(23) 456 789 0000">+1(23) 456 789 1200</a>
                             </li>
                             <li class="green">Or</li>
                             <li><a href="contact.html" class="btn button-style">Get in touch</a></li>
@@ -399,7 +399,7 @@
                         <p class="mb-4">The medical urn is made to be spent. In and propagandize adornment, mass in time, mourning wisdom. It is not the same as the heat of the house or the house of God. </p>
                         <div class="app-4-connection">
                             <div class="newsletter">
-                                <label>Never Miss a Deal From Foodies</label>
+                                <label>Never Miss a Deal From Foodies Men</label>
                                 <form action="#" methos="GET" class="d-flex wrap-align">
                                     <input type="email" placeholder="Enter your email id" required="required" />
                                     <button type="submit">Get Promocode</button>
@@ -429,7 +429,7 @@
             <div class="container">
                 <div class="row footer-p">
                     <div class="col-lg-4 pr-lg-5">
-                        <a class="logo" href="index.html"><i class="fa fa-cutlery" aria-hidden="true"></i> Foodies</a>
+                        <a class="logo" href="index.html"><i class="fa fa-cutlery" aria-hidden="true"></i> Foodies Men</a>
                         <p class="mt-4">he master of the household's finances, the master of life's homework, the author of life. </p>
                     </div>
                     <div class="col-lg-4 mt-lg-0 mt-4">
@@ -451,7 +451,7 @@
                             </div>
                             <div class="col-6 column pl-0">
                                 <ul class="footer-gd-16">
-                                    <li><a href="menu.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Foodies
+                                    <li><a href="menu.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Foodies Men
                                             Menu</a></li>
                                     <li><a href="#privacy"><i class="fa fa-angle-right" aria-hidden="true"></i>Privacy
                                             Policy</a></li>
@@ -476,7 +476,7 @@
                 </div>
                 <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
                     <div class="columns text-lg-left">
-                        <p class="copy-text">copywrite &copy; by yashodeep joshi
+                        <p class="copy-text">copywrite &copy; by yashodeep joshi 2023
                         </p>
                     </div>
                     <div class="columns-2 mt-md-0 mt-3">
