--- a/menu.html
+++ b/menu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Foodies - Restaurant Category Responsive Web Template - Menu : W3Layouts</title>
+    <title>Foodies Men - Restaurant Category Responsive Web Template - Menu : W3Layouts</title>
     <!-- google-fonts -->
     <link href="//fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
@@ -18,7 +18,7 @@
             <nav class="navbar navbar-expand-lg stroke px-0">
                 <h1>
                     <a class="navbar-brand" href="index.html">
-                        <i class="fa fa-cutlery" aria-hidden="true"></i> Foodies
+                        <i class="fa fa-cutlery" aria-hidden="true"></i> Foodies Men
                     </a>
                 </h1>
                 <!-- if logo is image enable this   
@@ -92,7 +92,7 @@
     <div class="inner-banner">
         <section class="w3l-breadcrumb">
             <div class="container">
-                <h4 class="inner-text-title font-weight-bold mb-sm-3 mb-2">Foodies Menu</h4>
+                <h4 class="inner-text-title font-weight-bold mb-sm-3 mb-2">Foodies Men Menu</h4>
                 <ul class="breadcrumbs-custom-path">
                     <li><a href="index.html">Home</a></li>
                     <li class="active"><span class="fa fa-chevron-right mx-2" aria-hidden="true"></span>Menu</li>
@@ -583,7 +583,7 @@
                         <p class="mb-4"> The medical urn is made to be spent. In and propagandize adornment, mass in time, mourning wisdom. It is not the same as the heat of the house or the house of God. </p>
                         <div class="app-4-connection">
                             <div class="newsletter">
-                                <label>Never Miss a Deal From Foodies</label>
+                                <label>Never Miss a Deal From Foodies Men</label>
                                 <form action="#" methos="GET" class="d-flex wrap-align">
                                     <input type="email" placeholder="Enter your email id" required="required" />
                                     <button type="submit">Get Promocode</button>
@@ -614,7 +614,7 @@
                 <div class="row footer-p">
                     <div class="col-lg-4 pr-lg-5">
                         <a class="logo" href="index.html"><i class="fa fa-cutlery" aria-hidden="true"></i>
-                            Foodies</a>
+                            Foodies Men</a>
                         <p class="mt-4">he master of the household's finances, the master of life's homework, the author of life. </p>
                     </div>
                     <div class="col-lg-4 mt-lg-0 mt-4">
@@ -636,7 +636,7 @@
                             </div>
                             <div class="col-6 column pl-0">
                                 <ul class="footer-gd-16">
-                                    <li><a href="menu.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Foodies
+                                    <li><a href="menu.html"><i class="fa fa-angle-right" aria-hidden="true"></i>Foodies Men
                                             Menu</a></li>
                                     <li><a href="#privacy"><i class="fa fa-angle-right" aria-hidden="true"></i>Privacy
                                             Policy</a></li>
@@ -663,7 +663,7 @@
                 </div>
                 <div class="d-flex below-section justify-content-between align-items-center pt-4 mt-5">
                     <div class="columns text-lg-left">
-                        <p class="copy-text">copywrite &copy; by yashodeep joshi
+                        <p class="copy-text">copywrite &copy; by yashodeep joshi 2023
                         </p>
                     </div>
                     <div class="columns-2 mt-md-0 mt-3">
