--- a/about.html
+++ b/about.html
@@ -177,7 +177,7 @@
                                 <div class="position-relative">
                                     <img src="assets/images/team1.jpg" class="img-responsive" alt="content-photo">
                                     <div class="text-position">
-                                        <h4><a href="about.html">Jimic Nasium</a></h4>
+                                        <h4><a href="about.html">Yash Kulkarni</a></h4>
                                         <p>Best Chef</p>
                                     </div>
                                 </div>
@@ -186,7 +186,7 @@
                                 <div class="position-relative">
                                     <img src="assets/images/team2.jpg" class="img-responsive" alt="content-photo">
                                     <div class="text-position">
-                                        <h4><a href="about.html">Henry Itondo</a></h4>
+                                        <h4><a href="about.html">Santosh Mehta</a></h4>
                                         <p>Food Expert</p>
                                     </div>
                                 </div>
