--- a/menu.html
+++ b/menu.html
@@ -138,7 +138,7 @@
                         <div class="col-9 pl-4">
                             <div class="row no-gutters">
                                 <div class="col-9 menu-item-name">
-                                    <h6>Avocado Toast with Egg</h6>
+                                    <h6>Avocado Toast</h6>
                                 </div>
                                 <div class="col-3 menu-item-price text-right">
                                     <h6>$28</h6>
@@ -341,7 +341,7 @@
                             <div class="col-9 pl-4">
                                 <div class="row no-gutters">
                                     <div class="col-9 menu-item-name">
-                                        <h6>Chicken Salad Lunch Box</h6>
+                                        <h6> Salad Lunch Box</h6>
                                     </div>
                                     <div class="col-3 menu-item-price text-right">
                                         <h6>$23</h6>
@@ -367,7 +367,7 @@
                             <div class="col-9 pl-4">
                                 <div class="row no-gutters">
                                     <div class="col-9 menu-item-name">
-                                        <h6>Coriander Chicken and Rice</h6>
+                                        <h6>Rice</h6>
                                     </div>
                                     <div class="col-3 menu-item-price text-right">
                                         <h6>$46</h6>
@@ -409,7 +409,7 @@
                             <div class="col-9 pl-4">
                                 <div class="row no-gutters">
                                     <div class="col-9 menu-item-name">
-                                        <h6>Chicken grill with sauce</h6>
+                                        <h6> sauce</h6>
                                     </div>
                                     <div class="col-3 menu-item-price text-right">
                                         <h6>$67</h6>
@@ -461,7 +461,7 @@
                             <div class="col-9 pl-4">
                                 <div class="row no-gutters">
                                     <div class="col-9 menu-item-name">
-                                        <h6>Chicken grill with sauce</h6>
+                                        <h6> sauce</h6>
                                     </div>
                                     <div class="col-3 menu-item-price text-right">
                                         <h6>$46</h6>
