--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- google-fonts -->
     <link href="//fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700;800&display=swap"
         rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/style-starter.css">
+    <link rel="stylesheet" href="">
 </head>
 
 <body>
